--- a/style/maze/style.scss
+++ b/style/maze/style.scss
@@ -58,11 +58,11 @@ button.disabled, button[disabled=disabled] {
 }
 .run {
   background-position: 0px -21px;
-  padding-right: 3px;
+  margin-right: 3px;
 }
 .stop {
   background-position: -21px -21px;
-  padding-right: 3px;
+  margin-right: 3px;
 }
 
 .hide {
